# AI-Data-Copilot

./: .gitignore  README.md  README_Corporate_AI_Copilot (1).md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_users_auth.py  0003_multitenant_rls.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  chat.py  health.py
backend/app/core/: config.py  exceptions.py  logging.py  security.py
backend/app/db/: bootstrap.py  rls.py  schema_inspector.py  seed.py  session.py
backend/app/models/: __init__.py  base.py  business.py  chat_history.py  tenant.py  user.py
backend/app/repositories/: chat_repository.py  dashboard_repository.py  tenant_repository.py  user_repository.py
backend/app/schemas/: auth.py  chat.py  dashboard.py
backend/app/services/: analyzer.py  auth_service.py  chat_service.py
backend/app/services/llm/: __init__.py  base.py  factory.py  fake.py  ollama.py  prompts.py
backend/app/services/sql/: executor.py  generator.py  validator.py
backend/tests/: conftest.py  test_auth_api.py  test_generator.py  test_security.py  test_validator.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx
frontend/src/components/: ChatInput.tsx  LoginScreen.tsx  MessageBubble.tsx  ResultTable.tsx  (+1 more)
(+1 files in other folders)
